doplnenie skills na stranke

--- a/peterkuchar.sk/index.html
+++ b/peterkuchar.sk/index.html
@@ -297,17 +297,27 @@
 
                     <tr>
                         <td>HTML:</td>
-                        <td><div class="bar"><div class="html">60%</div></div></td>
+                        <td><div class="bar"><div class="html">75%</div></div></td>
                     </tr>
 
                     <tr>
                         <td>CSS:</td>
-                        <td><div class="bar"><div class="css">50%</div></div></td>
+                        <td><div class="bar"><div class="css">75%</div></div></td>
                     </tr>
 
                     <tr>
                         <td>JavaScript:</td>
-                        <td><div class="bar"><div class="js">5%</div></div></td>
+                        <td><div class="bar"><div class="js">25%</div></div></td>
+                    </tr>
+
+                    <tr>
+                        <td>Python:</td>
+                        <td><div class="bar"><div class="py">25%</div></div></td>
+                    </tr>
+
+                    <tr>
+                        <td>PHP:</td>
+                        <td><div class="bar"><div class="php">10%</div></div></td>
                     </tr>
 
                     <tr>
