doplnene chybajuce adresare

--- a/peterkuchar.sk/index.html
+++ b/peterkuchar.sk/index.html
@@ -245,6 +245,11 @@
                     </tr>
 
                     <tr>
+                        <td>2022:</td>
+                        <td><span>CS50.harvard.edu</span><br>Python</td>                        
+                    </tr>
+
+                    <tr>
                         <td>2014:</td>
                         <td><span>IT LEARNING Slovakia</span><br>HTML, CSS</td>                        
                     </tr>
